--- a/asporto/index.html
+++ b/asporto/index.html
@@ -4,15 +4,15 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=yes"/>
-    <title>Beerstrot | Take Away</title>
-    <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Take Away il Menù da Asporto di Caè Vecchia Beerstrot"/>
+    <title>Beerstrot | Asporto</title>
+    <meta name="description" content="Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti? Abbiamo un menù anche per questo. Scopri il Asporto il Menù da Asporto di Caè Vecchia Beerstrot"/>
     <link rel="author" href="google.com/+cavecchiabeerstrotfilottrano"/>
     <meta name="author" content="Ca' Vecchia Beerstrot"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <meta name="copyright" content="Ca' Vecchia Beerstrot Copyright (c) 2016"/>
     <meta property="fb:app_id" content="1549149915357715"/>
     <link rel="icon" href="http://www.beerstrot.it/asset/img/thumbs/favicon.png">
-    <link rel="canonical" href="http://www.beerstrot.it/take-away/"/>
+    <link rel="canonical" href="http://www.beerstrot.it/asporto/"/>
     <link rel="stylesheet" href="http://www.beerstrot.it/css/app.css"/>
     <link href="//cdnjs.cloudflare.com/ajax/libs/foundicons/3.0.0/foundation-icons.css" rel="stylesheet">
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
@@ -48,7 +48,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li class="active"><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
+                <li class="active"><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -63,7 +63,7 @@
 <!-- fine navbar con hamburger -->
     <header class="row">
         <div class="medium-12 large-12 columns">
-            <h1>Take Away</h1>
+            <h1>Asporto</h1>
             <hr>
             <p>Dal Mercoledì alla Domenica dalle 18:30</p>
             <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
@@ -329,7 +329,7 @@
             <p class="links">
                 <a href="http://www.beerstrot.it">Home</a>
                 <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="http://www.beerstrot.it/eventi/">Eventi</a>
                 <a href="http://www.beerstrot.it/social/">Social</a>
                 <a href="http://www.beerstrot.it/contatti/">Contatti</a>
