--- a/eventi/halloween.html
+++ b/eventi/halloween.html
@@ -45,7 +45,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li class="active"><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -231,7 +231,7 @@
             <p class="links">
                 <a href="http://www.beerstrot.it">Home</a>
                 <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="http://www.beerstrot.it/eventi/">Eventi</a>
                 <a href="http://www.beerstrot.it/social/">Social</a>
                 <a href="http://www.beerstrot.it/contatti/">Contatti</a>
