--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -107,17 +107,17 @@
     <div class="panel-home-n">
         <div class="row">
             <div class="medium-6 large-6 medium-offset-6 large-offset-6 columns">
-                <h1>Take Away</h1>
+                <h1>Asporto</h1>
             </div>
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <a role="button" href="http://www.beerstrot.it/take-away/"><img src="http://www.beerstrot.it/asset/img/medium/take-away.jpg" alt="Take Away" class="extra-space-image-tab-home"></a>
+                <a role="button" href="http://www.beerstrot.it/asporto/"><img src="http://www.beerstrot.it/asset/img/medium/asporto.jpg" alt="Asporto" class="extra-space-image-tab-home"></a>
             </div>
             <div class="medium-6 large-6 columns">
                 <p>Non hai voglia di cucinare? Stai guardando la partita da solo o con gli amici e hai voglia di mettere qualcosa fra i denti?</p>
                 <p>Abbiamo un menù anche per questo.</p>
-                <a role="button" href="http://www.beerstrot.it/take-away/">Scopri il Menù Take Away &rarr;</a>
+                <a role="button" href="http://www.beerstrot.it/asporto/">Scopri il Menù Asporto &rarr;</a>
             </div>
         </div>
     </div>
@@ -307,7 +307,7 @@
             <p class="links">
                 <a href="http://www.beerstrot.it">Home</a>
                 <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="http://www.beerstrot.it/eventi/">Eventi</a>
                 <a href="http://www.beerstrot.it/social/">Social</a>
                 <a href="http://www.beerstrot.it/contatti/">Contatti</a>
