--- a/contatti/index.html
+++ b/contatti/index.html
@@ -46,7 +46,7 @@
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/menu/">Menù</a></li>
                 <li class="divider"></li>
-                <li><a href="http://www.beerstrot.it/take-away/">Take Away</a></li>
+                <li><a href="http://www.beerstrot.it/asporto/">Asporto</a></li>
                 <li class="divider"></li>
                 <li><a href="http://www.beerstrot.it/eventi/">Eventi</a></li>
                 <li class="divider"></li>
@@ -419,7 +419,7 @@
             <p class="links">
                 <a href="http://www.beerstrot.it">Home</a>
                 <a href="http://www.beerstrot.it/menu/">Menù</a>
-                <a href="http://www.beerstrot.it/take-away/">Take Away</a>
+                <a href="http://www.beerstrot.it/asporto/">Asporto</a>
                 <a href="http://www.beerstrot.it/eventi/">Eventi</a>
                 <a href="http://www.beerstrot.it/social/">Social</a>
                 <a href="http://www.beerstrot.it/contatti/">Contatti</a>
