--- a/menu/index.html
+++ b/menu/index.html
@@ -140,6 +140,10 @@
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
                                 <p>patate fritte a bastoncini</p>
                             </li>
+                            <li>
+                                <h3>Insalata Mista<span class="right">4</span></h3>    
+                                <p>con verdure di stagione</p>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -314,6 +318,10 @@
                             <li>
                                 <h3>Patate Fritte<span class="right">3,5</span></h3>    
                                 <p>patate fritte a bastoncini</p>
+                            </li>
+                            <li>
+                                <h3>Insalata Mista<span class="right">4</span></h3>    
+                                <p>con verdure di stagione</p>
                             </li>
                         </ul>
                     </div>
