--- a/asporto/index.html
+++ b/asporto/index.html
@@ -65,7 +65,7 @@
         <div class="medium-12 large-12 columns">
             <h1>Asporto</h1>
             <hr>
-            <p>Dal Mercoledì alla Domenica dalle 18:30</p>
+            <p>Dal Mercoledì alla Domenica dalle 18:30 alle 19:30</p>
             <span class="show-for-small"><a role="button" href="tel:+390718853384" class="button right"><i class="fi-telephone"></i> Ordina</a></span>
             <span class="hide-for-small"><a role="button" href="tel:+390718853384" class="button"><i class="fi-telephone"></i> 071 8853384</a></span>
         </div>
@@ -105,31 +105,39 @@
                 <div class="large-12 medium-12 small-12 columns">
                     <h2 class="subheader">Per Stuzzicare</h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
-                        <li>
-                            <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
-                            <p>peperoncini piccanti avvolti nella pancetta</p>
-                        </li>
-                        <li>
-                            <h3>Bocconcini di Pollo<span class="right">4,5</span></h3>    
-                            <p>petto di pollo di prima scelta impanato e fritto</p>
-                        </li>
-                        <li>
-                            <h3>Fagottini di Verza<span class="right">4,5</span></h3>    
-                            <p>con ripieno di patate</p>
-                        </li>
-                        <li>
-                            <h3>Nachos Supreme<span class="right">4,5</span></h3>    
-                            <p>tortilla con peperoncini e cheddar</p>
-                        </li>
-                        <li>
-                            <h3>Cavoletti di Bruxelles<span class="right">4,5</span></h3>    
-                            <p>brasati alla birra</p>
-                        </li>
-                        <li>
-                            <h3>Patate Fritte<span class="right">3,5</span></h3>    
-                            <p>patate fritte a bastoncini</p>
-                        </li>
-                    </ul>
+                            <li>
+                                <h3>Peperoncini e Pancetta<span class="right">4,5</span></h3>    
+                                <p>peperoncini piccanti avvolti nella pancetta</p>
+                            </li>
+                            <li>
+                                <h3>Bocconcini di Pollo<span class="right">5</span></h3>    
+                                <p>petto di pollo di prima scelta impanato e fritto</p>
+                            </li>
+                            <li>
+                                <h3>Alette di Pollo<span class="right">5,5</span></h3>    
+                                <p> in salsa piccante</p>
+                            </li>
+                            <li>
+                                <h3>Nachos Supreme<span class="right">5</span></h3>    
+                                <p>tortilla con peperoncini e cheddar</p>
+                            </li>
+                            <li>
+                                <h3>Nachos Chili<span class="right">6,5</span></h3>    
+                                <p>tortilla con cheddar, carne e fagioli. leggermente piccante</p>
+                            </li>
+                            <li>
+                                <h3>Asparagi al Vapore<span class="right">5</span></h3>
+                                <p>asparagi croccanti serviti con un filo di olio extra vergine di oliva</p>
+                            </li>
+                            <li>
+                                <h3>Rotolo di Frittata<span class="right">5,5</span></h3>
+                                <p>con spinaci e formaggio</p>
+                            </li>
+                            <li>
+                                <h3>Patate Fritte<span class="right">3,5</span></h3>    
+                                <p>patate fritte a bastoncini</p>
+                            </li>
+                        </ul>
                 </div>
             </div>
         </div>
@@ -139,31 +147,31 @@
                     <h2 class="subheader">Hamburger <br><small>Con patate fritte. Cottura media o, a richiesta, al sangue.</small></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3>New York <span class="right">8,5</span></h3>
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/new-york.html">New York<span class="right">8,9</span></a></h3>    
                             <p>180 grammi di manzo, cheddar, cipolla caramellata, insalata</p>
                         </li>
                         <li>
-                            <h3>Diablo<span class="right">8,8</span></h3>
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/diablo.html">Diablo<span class="right">8,9</span></a></h3>    
                             <p>180 grammi di manzo, cheddar, pancetta, rucola, salsa piccante</p>
                         </li>
                         <li>
-                            <h3>Deciso<span class="right">8,8</span></h3> 
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/deciso.html">Deciso<span class="right">8,9</span></a></h3> 
                             <p>180 grammi di manzo, gorgonzola, pancetta, pomodorini confit</p>
                         </li>
                         <li>
-                            <h3>Inverno<span class="right">8,8</span></h3> 
-                            <p>180 grammi di manzo, taleggio, pancetta, insalata</p>
+                            <h3>Petaloso<span class="right">8,9</span></h3> 
+                            <p>180 grammi di manzo, composta di feta e pomodorini, latticello, valeriana</p>
                         </li>
                         <li>
-                            <h3>Lamb<span class="right">8,8</span></h3>    
-                            <p>180 grammi di agnello, salsa allo yogurt, rucola</p>
+                            <h3>Mini Burger<span class="right">6</span></h3>    
+                            <p>100 grammi di manzo, cheddar</p>
                         </li>
                         <li>
-                            <h3>Pollo<span class="right">8,8</span></h3>    
+                            <h3>Pollo<span class="right">8,9</span></h3>    
                             <p>180 grammi di petto di pollo, fontina, cipolla caramellata, rucola, salsa allo yogurt</p>
                         </li>
                         <li>
-                            <h3>Cecilia<span class="right">8</span></h3>    
+                            <h3><a href="http://www.beerstrot.it/menu/cibo/cecilia.html">Cecilia<span class="right">8</span></a></h3>    
                             <p>180 grammi di ceci e avocado con composta leggermente piccante di verdure e menta</p>
                         </li>
                     </ul>                      
@@ -176,12 +184,8 @@
                     <h2 class="subheader">Zuppe <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3>Vellutata di Castagne<span class="right">4,5</span></h3>    
-                            <p>zuppa di castagne con funghi e pancetta croccante</p>
-                        </li>
-                        <li>
-                            <h3>Orzetto alla Trentina<span class="right">4,5</span></h3>    
-                            <p>zuppa di orzo e speck</p>
+                            <h3>Vellutata di Carote<span class="right">4,5</span></h3>    
+                            <p>zuppa di carote con zenzero</p>
                         </li>
                     </ul>                      
                 </div>
@@ -193,7 +197,7 @@
                     <h2 class="subheader">Carni <br></h2>
                     <ul class="small-block-grid-1 medium-block-grid-3 large-block-grid-3">
                         <li>
-                            <h3>Costine<span class="right">10,5</span></h3>    
+                            <h3>Costine<span class="right">11,5</span></h3>    
                             <p>costine di maiale al forno in salsa barbeque servite con patate fritte</p>
                         </li>
                         <li>
@@ -203,10 +207,6 @@
                         <li>
                             <h3>Chili<span class="right">7,5</span></h3>    
                             <p>chili piccante con carne e fagioli servito in pagnotta</p>
-                        </li>
-                        <li>
-                            <h3>Buffalo Chicken Wings<span class="right">7,5</span></h3>    
-                            <p>alette di pollo in salsa buffalo piccante, servite con crema di gorgonzola</p>
                         </li>
                     </ul>                      
                 </div>
