--- a/contatti/index.html
+++ b/contatti/index.html
@@ -205,6 +205,11 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
+                <div class="your-class">
+                    <div><img data-caption="Insegna d'ingresso a Ca' Vecchia Beerstrot"  src="http://www.beerstrot.it/asset/img/thumbs/insegna-beerstrot-con-cielo-th.jpg" alt="Insegna Ca' Vecchia Beerstrot"></div>
+                    <div>your content</div>
+                    <div>your content</div>
+                </div>
                <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home" data-clearing>
                     <li>
                         <a href="http://www.beerstrot.it/asset/img/large/insegna-beerstrot-con-cielo.jpg" class="th">
@@ -431,5 +436,13 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/foundation/5.5.3/js/foundation.min.js"></script>
     <script src="http://www.beerstrot.it/js/app.min.js"></script>
+    <script src="http://www.beerstrot.it/js/slick.min.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+      $('.your-class').slick({
+        setting-name: setting-value
+      });
+    });
+  </script>
 </body>
 </html>
