--- a/contatti/index.html
+++ b/contatti/index.html
@@ -205,9 +205,9 @@
         </div>
         <div class="row">
             <div class="medium-6 large-6 columns">
-                <div class="your-class">
+                <div class="carousel">
                     <div><img data-caption="Insegna d'ingresso a Ca' Vecchia Beerstrot"  src="http://www.beerstrot.it/asset/img/thumbs/insegna-beerstrot-con-cielo-th.jpg" alt="Insegna Ca' Vecchia Beerstrot"></div>
-                    <div>your content</div>
+                    <div><img data-caption="Vialetto d'ingresso"  src="http://www.beerstrot.it/asset/img/thumbs/vialetto-e-erba-th.jpg" alt="Vialetto Entrata e Erba"></div>
                     <div>your content</div>
                 </div>
                <ul class="clearing-thumbs small-block-grid-3 medium-block-grid-3 large-block-grid-3 extra-space-image-tab-home" data-clearing>
@@ -439,7 +439,7 @@
     <script src="http://www.beerstrot.it/js/slick.min.js"></script>
     <script type="text/javascript">
     $(document).ready(function(){
-      $('.your-class').slick({
+      $('.carousel').slick({
         setting-name: setting-value
       });
     });
